src/main/default/objects/LogRecord__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>