src/main/default/objects/LogRecord__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>