src/main/default/objects/LogRecord__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>