src/main/default/objects/LogRecord__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>